chore: prepare for global packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ident-agency-cli",
+  "name": "@ident-agency/cli",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -22,6 +22,7 @@
     "@google-cloud/secret-manager": "6.0.1",
     "@google-cloud/storage": "7.16.0",
     "@iarna/toml": "2.2.5",
+    "@ident-agency/core": "file:../ident-agency-sdk/packages/core",
     "@noble/hashes": "1.7.2",
     "assert": "2.1.0",
     "chalk": "5.4.1",
