--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -29,13 +29,14 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
           registry-url: https://registry.npmjs.org/
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
+      - run: corepack enable
+
+      - uses: pnpm/action-setup@v4
         with:
-          version: 9
+          run_install: false
 
       - name: Install deps
         run: pnpm install --frozen-lockfile
