--- a/package.json
+++ b/package.json
@@ -60,13 +60,11 @@
     "@google-cloud/secret-manager": "6.0.1",
     "@google-cloud/storage": "7.16.0",
     "@iarna/toml": "2.2.5",
-    "@ident-agency/core": "^0.0.3",
+    "@ident-agency/core": "0.0.4",
     "@noble/hashes": "1.7.2",
-    "assert": "2.1.0",
     "chalk": "5.4.1",
     "cli-spinners": "3.2.0",
     "conf": "13.1.0",
-    "crypto": "1.0.1",
     "dotenv": "16.3.2",
     "elliptic": "6.6.1",
     "get-stdin": "9.0.0",
@@ -76,7 +74,6 @@
     "meow": "12.0.1",
     "open": "9.1.0",
     "ora": "8.2.0",
-    "path": "0.12.7",
     "prompts": "2.4.2",
     "ripple-address-codec": "5.0.0",
     "ripple-binary-codec": "2.3.0",
