--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -68,7 +68,7 @@ jobs:
         run: echo "version=$(node -p 'require(\"./package.json\").version')" >> "$GITHUB_OUTPUT"
 
       - name: Publish to npm
-        run: pnpm publish --access public --tag ${{ inputs.dist_tag }}
+        run: pnpm publish --access public --tag ${{ inputs.dist_tag }} --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
