--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -19,6 +19,11 @@ on:
         description: 'Explicit version (e.g. 0.4.2). Leave blank to use bump_type.'
         required: false
         type: string
+      build_only:
+        description: 'Build binaries only (skip npm publish)'
+        required: false
+        type: boolean
+        default: false
 
 permissions:
   contents: write
@@ -27,8 +32,23 @@ env:
   PKG_NAME: '@ident-agency/identa-cli'
 
 jobs:
+  get_version:
+    name: Get version for build-only mode
+    if: inputs.build_only == true
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.read_version.outputs.version }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Read version
+        id: read_version
+        run: echo "version=$(node -p 'require(\"./package.json\").version')" >> "$GITHUB_OUTPUT"
+
   publish_npm:
     name: Publish to npm
+    if: inputs.build_only != true
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.read_version.outputs.version }}
@@ -73,11 +93,10 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   tag_and_build:
-    name: Tag repo & build Bun binaries
-    needs: publish_npm
+    name: Tag repo
+    needs: [publish_npm, get_version]
+    if: always() && (needs.publish_npm.outputs.version != '' || needs.get_version.outputs.version != '')
     runs-on: ubuntu-latest
-    env:
-      VERSION: ${{ needs.publish_npm.outputs.version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -88,12 +107,15 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          VERSION="${{ needs.publish_npm.outputs.version || needs.get_version.outputs.version }}"
+          echo "Creating tag v${VERSION}"
           git tag "v${VERSION}" || true
           git push origin "v${VERSION}" || true
 
   build_binaries:
     name: Build ${{ matrix.target }}
-    needs: publish_npm
+    needs: [publish_npm, get_version]
+    if: always() && (needs.publish_npm.outputs.version != '' || needs.get_version.outputs.version != '')
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -108,8 +130,8 @@ jobs:
           - os: windows-latest
             target: win-x64
     env:
-      VERSION: ${{ needs.publish_npm.outputs.version }}
       BINARY_BASENAME: identa
+      VERSION: ${{ needs.publish_npm.outputs.version || needs.get_version.outputs.version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -150,11 +172,13 @@ jobs:
 
   release:
     name: Create GitHub Release
-    needs: [publish_npm, build_binaries, tag_and_build]
+    needs: [publish_npm, get_version, build_binaries, tag_and_build]
+    if: always() && (needs.publish_npm.outputs.version != '' || needs.get_version.outputs.version != '')
     runs-on: ubuntu-latest
     env:
-      VERSION: ${{ needs.publish_npm.outputs.version }}
+      VERSION: ${{ needs.publish_npm.outputs.version || needs.get_version.outputs.version }}
     steps:
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
