--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -92,6 +92,15 @@ jobs:
         id: read_version
         run: echo "version=$(node -p 'require(\"./package.json\").version')" >> "$GITHUB_OUTPUT"
 
+      - name: Commit version bump
+        if: (inputs.explicit_version != '' || inputs.bump_type != 'none')
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add package.json
+          git commit -m "chore: bump version to ${{ steps.read_version.outputs.version }}"
+          git push
+
       - name: Publish to npm
         run: pnpm publish --access public --tag ${{ inputs.dist_tag }} --no-git-checks
         env:
