--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,27 @@
 {
+  "version": 2,
+  "public": true,
+  "cleanUrls": false,
+  "trailingSlash": false,
+
+  "builds": [{ "src": "public/**", "use": "@vercel/static" }],
+
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
+  ],
+
   "redirects": [
     {
-      "source": "/((?!install\\.sh$).*)",
-      "destination": "https://www.ident.agency",
+      "source": "/.*",
+      "has": [{ "type": "missing", "key": "file" }],
+      "destination": "https://www.ident.agency/?utm_source=get.identa-cli&utm_medium=redirect",
       "statusCode": 302
     }
   ],
+
   "headers": [
     {
       "source": "/install.sh",
@@ -21,11 +37,20 @@
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'none'; frame-ancestors 'none'; sandbox"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "no-referrer"
         }
       ]
     }
-  ],
-  "public": true,
-  "cleanUrls": false,
-  "trailingSlash": false
+  ]
 }
