--- a/vercel.json
+++ b/vercel.json
@@ -7,18 +7,16 @@
   "builds": [{ "src": "public/**", "use": "@vercel/static" }],
 
   "routes": [
+    { "handle": "filesystem" },
+
+    { "src": "/install\\.sh", "dest": "/public/install.sh" },
+
     {
       "src": "/(.*)",
-      "dest": "/public/$1"
-    }
-  ],
-
-  "redirects": [
-    {
-      "source": "/.*",
-      "has": [{ "type": "missing", "key": "file" }],
-      "destination": "https://www.ident.agency/?utm_source=get.identa-cli&utm_medium=redirect",
-      "statusCode": 302
+      "status": 302,
+      "headers": {
+        "Location": "https://www.ident.agency/$1?utm_source=get.identa-cli&utm_medium=redirect"
+      }
     }
   ],
 
@@ -26,30 +24,15 @@
     {
       "source": "/install.sh",
       "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/plain; charset=utf-8"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=120, s-maxage=120"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
+        { "key": "Content-Type", "value": "text/plain; charset=utf-8" },
+        { "key": "Cache-Control", "value": "public, max-age=120, s-maxage=120" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "DENY" },
         {
           "key": "Content-Security-Policy",
           "value": "default-src 'none'; frame-ancestors 'none'; sandbox"
         },
-        {
-          "key": "Referrer-Policy",
-          "value": "no-referrer"
-        }
+        { "key": "Referrer-Policy", "value": "no-referrer" }
       ]
     }
   ]
