--- a/vercel.json
+++ b/vercel.json
@@ -1,33 +1,21 @@
 {
-  "version": 2,
-  "public": true,
   "cleanUrls": false,
   "trailingSlash": false,
-
-  "builds": [{ "src": "public/**", "use": "@vercel/static" }],
-
-  "routes": [
-    { "handle": "filesystem" },
-
+  "outputDirectory": "public",
+  "headers": [
     {
-      "src": "/install\\.sh",
-      "dest": "/public/install.sh",
-      "headers": {
-        "Content-Type": "text/plain; charset=utf-8",
-        "Cache-Control": "public, max-age=120, s-maxage=120",
-        "X-Content-Type-Options": "nosniff",
-        "X-Frame-Options": "DENY",
-        "Content-Security-Policy": "default-src 'none'; frame-ancestors 'none'; sandbox",
-        "Referrer-Policy": "no-referrer"
-      }
-    },
-
-    {
-      "src": "/(.*)",
-      "status": 302,
-      "headers": {
-        "Location": "https://www.ident.agency/$1?utm_source=get.identa-cli&utm_medium=redirect"
-      }
+      "source": "/install.sh",
+      "headers": [
+        { "key": "Content-Type", "value": "text/plain; charset=utf-8" },
+        { "key": "Cache-Control", "value": "public, max-age=120, s-maxage=120" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "DENY" },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'none'; frame-ancestors 'none'; sandbox"
+        },
+        { "key": "Referrer-Policy", "value": "no-referrer" }
+      ]
     }
   ]
 }
