--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -46,10 +46,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
+
+      - name: Pull latest changes
+        run: git pull origin ${{ github.ref_name }} || true
 
       - name: Read version
         id: read_version
-        run: echo "version=$(node -p 'require(\"./package.json\").version')" >> "$GITHUB_OUTPUT"
+        run: |
+          VERSION=$(node -p 'require("./package.json").version')
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "Current version: $VERSION"
 
   publish_npm:
     name: Publish to npm
@@ -78,6 +86,10 @@ jobs:
       - name: Install deps
         run: pnpm install --frozen-lockfile
 
+      - name: Read current version
+        id: current_version
+        run: echo "version=$(node -p 'require(\"./package.json\").version')" >> "$GITHUB_OUTPUT"
+
       # Bump version (explicit)
       - name: Bump version (explicit)
         if: inputs.explicit_version != ''
@@ -88,7 +100,7 @@ jobs:
         if: inputs.explicit_version == '' && inputs.bump_type != 'none'
         run: pnpm version ${{ inputs.bump_type }} --no-git-tag-version
 
-      - name: Read version
+      - name: Read version after bump
         id: read_version
         run: echo "version=$(node -p 'require(\"./package.json\").version')" >> "$GITHUB_OUTPUT"
 
